--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,6 @@ framework = arduino
 monitor_speed = 115200
 
 lib_deps = 
-	lv_arduino@3.0.1
+	lvgl/lv_arduino @ 3.0.1
 	TFT_eSPI@2.2.15
     xreef/PCF8574 library @ 2.2.0
