Test_changes_Nandu

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,6 @@ monitor_speed = 115200
 
 lib_deps = 
 	lvgl/lv_arduino @ 3.0.1
-	TFT_eSPI@2.2.15
+	bodmer/TFT_eSPI @ ^2.3.59
     xreef/PCF8574 library @ 2.2.0
 	fastled/FastLED @ ^3.4.0
