Working Image viewer

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+;upload_protocol = espota
 
 lib_deps = 
 	lvgl/lv_arduino @ 3.0.1
@@ -20,4 +21,4 @@ lib_deps =
     xreef/PCF8574 library @ 2.2.0
 	fastled/FastLED @ ^3.4.0
 
-upload_port = 192.168.1.5
+;upload_port = 192.168.0.105
